# rig-veh

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  justfile  release-plz.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: dot_export.rs  evolution_loop.rs  veh_loop.rs
src/: artifact.rs  diff.rs  ensemble.rs  error.rs  evaluator.rs  evidence.rs  evolution.rs  graph.rs  identity.rs  intent.rs  ledger.rs  lib.rs  mutator.rs  node.rs  policy.rs  rag_evaluator.rs  sandbox.rs  selector.rs
tests/: canonical_snapshot.rs  ensemble.rs  evidence_bundle.rs  evolution_driver.rs  identity.rs  lineage.rs  live_ollama.rs  optional_features.rs  policy_gate.rs  rollback.rs  selector.rs  signed_rollback.rs  staged_evaluator.rs
